都道府県のタイトルのデザインを修正
横幅が500pより下になった場合font-sizeを0.2rem縮めている

--- a/src/components/CheckBox.scss
+++ b/src/components/CheckBox.scss
@@ -34,3 +34,11 @@
     height: 70vh;
   }
 }
+
+@media screen and (max-width: 500px) {
+  .container {
+    .prefViewTitle {
+      font-size: 1.2rem;
+    }
+  }
+}
